# ZolnayBence

CA/hangman/: main.cpp
Orientation_exam/: .mxproject  vizsga.ioc
Orientation_exam/Src/: main.c
Week_7/Day_1/: .mxproject  Blocking_The_Execution.ioc
Week_7/Day_1/Flashing LED/: .mxproject  workingproject.ioc
Week_7/Day_1/Src/: main.c
Week_7/Day_1/Toggle_Led/: .mxproject  Toggle_Led.ioc
Week_7/day_2/: .mxproject  flash_multiple_LEDS.ioc
Week_7/day_3/Binarycounter/: .mxproject  Binary_counter.ioc
practice/practice/: .mxproject  STM32F746NGHX_FLASH.ld  STM32F746NGHX_RAM.ld  exercise.ioc
practice/vector/: CMakeLists.txt  main.c  my_vector.c  my_vector.h
week-4/Green_fox_inheritence/: CMakeLists.txt  Cohort.cpp  Mentor.cpp  Mentor.h  Person.h  Sponsor.h  Student.cpp  Student.h  main.cpp
week-4/day2/Model-stringed-instruments/: BassGuitar.cpp  BassGuitar.h  CMakeLists.txt  ElectricGuitar.cpp  ElectricGuitar.h  Instrument.cpp  Instrument.h  StringedInstruments.cpp  StringedInstruments.h  Violin.cpp  Violin.h  main.cpp
week2/day_3/Fill_with_rectangles/: CMakeLists.txt  Fill_with_Rectangles.cpp
week2/day_3/Fill_with_rectangles/cmake/: FindSDL2_image.cmake
week_10/snake_game/: .mxproject  snake_game.ioc
week_6/SantaFactory/: CMakeLists.txt  Children.cpp  Children.h  Doll.cpp  Doll.h  DottedBall.cpp  DottedBall.h  JumpingRope.cpp  JumpingRope.h  Santa.cpp  Santa.h  SantaFactory.cpp  SantaFactory.h  Toy.cpp  Toy.h
week_6/Weekly_feedback/: CMakeLists.txt  main.cpp
week_6/day_5/: CMakeLists.txt
week_6/greatest_value/: CMakeLists.txt
(+514 files in other folders)
